--- a/Bantyukov Igor/hello world.html
+++ b/Bantyukov Igor/hello world.html
@@ -1,1 +1,11 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      Bantyukov Igor
+    </title>
+  </head>
+  <body>
+    Hello World!
+  </body>
+</html>
